@@ -1,6 +1,7 @@
 Release 1.5 (11/23/2009)
 ========================
 
+* Update memcached to default to using pylibmc when available.
 * Fix bug when cache value doesn't exist causing has_key to throw
   an exception rather than return False. Fixes #24.
 * Fix bug where getpid under GAE is used improperly to assume it
